src/k8s/k8s.cr/argocd/resources/registry/daemonSets.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: registry
  namespace: registry
  labels:
    app.kubernetes.io/name: registry
spec:
  revisionHistoryLimit: 0 
  selector:
    matchLabels:
      app.kubernetes.io/name: registry
  template:
    metadata:
      labels:
        app.kubernetes.io/name: registry
    spec:
      containers:
      - name: registry-dockerio
        image: docker.io/library/registry:2
        ports:
          - containerPort: 5000
            name: http-dockerio
            protocol: TCP
        volumeMounts:
        - name: registry-data
          mountPath: /var/lib/registry
      - name: registry-ghcrio
        image: docker.io/library/registry:2
        ports:
          - containerPort: 5001
            name: http-ghcrio
            protocol: TCP
        volumeMounts:
        - name: registry-data
          mountPath: /var/lib/registry
      - name: registry-quayio
        image: docker.io/library/registry:2
        ports:
          - containerPort: 5002
            name: http-quayio
            protocol: TCP
        volumeMounts:
        - name: registry-data
          mountPath: /var/lib/registry
      - name: registry-lscrio
        image: docker.io/library/registry:2
        ports:
          - containerPort: 50003
            name: http-lscrio
            protocol: TCP
        volumeMounts:
        - name: registry-data
          mountPath: /var/lib/registry
      - name: registry-k8sio
        image: docker.io/library/registry:2
        ports:
          - containerPort: 5004
            name: http-k8sio
            protocol: TCP
        volumeMounts:
        - name: registry-data
          mountPath: /var/lib/registry
      volumes:
      - name: registry-data
        nfs:
          path: /mnt/hdd/k8s/registry
          server: 10.1.60.6
